updated for east asian dlc.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <button class="btn" onclick="randomSaAnimal();">South American animal</button>
             <button class="btn" onclick="randomOceaniaAnimal();">Oceania animal</button>
             <button class="btn" onclick="randomAntarcticaAnimal();">Antarctica animal</button>
+            <button class="btn" onclick="randomEAAnimal();">East Asian animal</button>
         </div>
     </div>
     <footer>
