updated for african dlc/fixes

--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
             <button class="btn" onclick="randomSaAnimal();">South American animal</button>
             <button class="btn" onclick="randomOceaniaAnimal();">Oceania animal</button>
             <button class="btn" onclick="randomAntarcticaAnimal();">Antarctica animal</button>
-            <button class="btn" onclick="randomEAAnimal();">East Asian animal</button>
         </div>
     </div>
     <footer>
-        <p>&copy; <a href="https://twitter.com/thehobbit94">Emblo</a> 2021</p>
+        <p>
+            &copy; <a href="https://twitter.com/thehobbit94">Emblo</a> 2021. 
+            <br />
+            Planet Zoo and all associated information belongs to <a href="https://www.frontier.co.uk/">&copy; Frontier Developments.</a>
+        </p>
     </footer>
 </body>
 </html>
