--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="script.js" async></script>
     <title>Planet Zoo Random Animal Generator</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <header>
