changed social link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <footer>
         <p>
-            &copy; <a href="https://twitter.com/thehobbit94">Emblo</a> <span id="year"></span>. 
+            &copy; <a href="https://github.com/emblo">Emblo</a> <span id="year"></span>. 
             <br />
             Planet Zoo and all associated information belongs to <a href="https://www.frontier.co.uk/">&copy; Frontier Developments.</a>
         </p>
