fixed copyright icon/link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>
             &copy; <a href="https://github.com/emblo">Emblo</a> <span id="year"></span>. 
             <br />
-            Planet Zoo and all associated information belongs to <a href="https://www.frontier.co.uk/">&copy; Frontier Developments.</a>
+            Planet Zoo and all associated information belongs to &copy;<a href="https://www.frontier.co.uk/"> Frontier Developments.</a>
         </p>
     </footer>
 </body>
