changed result + fixed media query

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <!--Result-->
         <label for="result">Your animal:</label>
-        <input type="text" id="result" name="result" readonly="readonly">
+        <span id="result"></span>
         <!--Habitat-->
         <div class="buttons">
             <button class="btn" onclick="randomHabitatAnimal();">Habitat Animal</button>
