accessibility check + label replacement

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <div class="container">
         <!--Result-->
-        <label for="result">Your animal:</label>
+        <h2>Your animal:</h2>
         <span id="result"></span>
         <!--Habitat-->
         <div class="buttons">
