--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <button class="btn" onclick="randomSaAnimal();">South American animal</button>
             <button class="btn" onclick="randomOceaniaAnimal();">Oceania animal</button>
             <button class="btn" onclick="randomAntarcticaAnimal();">Antarctica animal</button>
-            <button class="btn" onclick="">Aquatic animal</button>
-            <button class="btn" onclick="">Desert animal</button>
-            <button class="btn" onclick="">Grassland animal</button>
-            <button class="btn" onclick="">Taiga animal</button>
-            <button class="btn" onclick="">Temperate animal</button>
-            <button class="btn" onclick="">Tropical animal</button>
-            <button class="btn" onclick="">Tundra animal</button>
+            <button class="btn" onclick="randomAquaticAnimal();">Aquatic animal</button>
+            <button class="btn" onclick="randomDesertAnimal();">Desert animal</button>
+            <button class="btn" onclick="randomGrasslandAnimal();">Grassland animal</button>
+            <button class="btn" onclick="randomTaigaAnimal();">Taiga animal</button>
+            <button class="btn" onclick="randomTemperateAnimal();">Temperate animal</button>
+            <button class="btn" onclick="randomTropicalAnimal();">Tropical animal</button>
+            <button class="btn" onclick="randomTundraAnimal();">Tundra animal</button>
         </div>
     </div>
     <footer>
