added button for CA animals

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <button class="btn" onclick="randomTemperateAnimal();">Temperate animal</button>
             <button class="btn" onclick="randomTropicalAnimal();">Tropical animal</button>
             <button class="btn" onclick="randomTundraAnimal();">Tundra animal</button>
+            <button class="btn" onclick="randomCaAnimal();">Central America animal</button>
         </div>
     </div>
     <footer>
