changed footer text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <footer>
         <p>
-            &copy; <a href="https://github.com/emblo">Emblo</a> <span id="year"></span>. 
+            Made with <span role="img" aria-label="green heart with a black border">&#128154;</span> by <a href="https://github.com/emblo" target="_blank" rel="noopener noreferrer">Emblo</a> <span id="year"></span>. 
             <br />
             Planet Zoo and all associated information belongs to &copy;<a href="https://www.frontier.co.uk/"> Frontier Developments.</a>
         </p>
